fix: 调整 medium-zoom-overlay 和 medium-zoom-image 的 z-index 值以解决层级问题

--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -441,7 +441,7 @@ nav[data-toggle="toc"] {
 
 .medium-zoom-overlay,
 .medium-zoom-image--opened {
-  z-index: 1030;
+  z-index: 2000;
 }
 
 #toc-sidebar {
